force-app/main/default/objects/K_Contact__c/K_Contact__c.object-meta.xml
<CustomObject>
    <description>This Object includes existing Kanlet&apos;s Contacts.</description>
    <label>Inscope Contact</label>
    <nameField>
        <displayFormat>KC_{00000}</displayFormat>
        <label>KC_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inscope Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>