force-app/main/default/objects/K_Contact__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>Indicates name of the Company.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>