force-app/main/default/objects/K_Contact__c/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <inlineHelpText>Indicates the status of company (i.e. Target Account, Current Customer, Past Customer, Trail Account)</inlineHelpText>
    <label>Company Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target Account</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Past Customer</fullName>
            </value>
            <value>
                <fullName>Trail Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>