force-app/main/default/objects/K_Contact__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <inlineHelpText>Indicates the website of the company.</inlineHelpText>
    <label>Company Website</label>
    <length>80</length>
    <type>Text</type>
</CustomField>