force-app/main/default/objects/K_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates Contact Id fetched from standard contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>K Contacts</relationshipLabel>
    <relationshipName>K_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>