force-app/main/default/objects/K_Contact__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <inlineHelpText>Indicates the Email Id of the Contact fetched from standard contact.</inlineHelpText>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>