force-app/main/default/objects/K_Contact__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>First name of the contact fetched from standard contact.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>