force-app/main/default/objects/K_Contact__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <inlineHelpText>Designation of the contact fetched from standard contact.</inlineHelpText>
    <label>Job Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>