force-app/main/default/objects/K_Contact__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Last name of the contact fetched from standard contact.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>